# data_parallel_kernels

./: .clang-format  .gitignore  LICENSE  README.md
basic/: CMakeLists.txt  README.md  main.cpp
hierarchical/: CMakeLists.txt  README.md  main.cpp
scoped/: CMakeLists.txt  README.md  main.cpp
work_group/: CMakeLists.txt  README.md  main.cpp
